# TTTTRPS

./: .GEMINI  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  FEATURE_PARITY_TASKS.md  GEMINI.md  MEILISEARCH_INTEGRATION_TASKS.md  README.md  build.sh  cargo_check_output.txt  check_output.txt  check_output_2.txt  check_output_3.txt  fns.txt  pr_body.json
frontend/: Cargo.toml  Dioxus.toml  Trunk.toml  check_output.txt  check_output_frontend.txt  check_output_frontend_2.txt  check_output_frontend_3.txt  check_output_frontend_4.txt  check_output_frontend_5.txt  check_output_frontend_final.txt  check_output_frontend_final_2.txt  check_output_frontend_final_3.txt  check_output_frontend_final_4.txt  index.html  input.css  package.json  tailwind.config.js
frontend/public/: combat.css  effects.css  main.css  tailwind.css  themes.css
frontend/src/: app.rs  bindings.rs  lib.rs  main.rs  theme.rs
frontend/src-tauri/: Cargo.toml
frontend/src/bindings/: ai.rs  audio.rs  auth.rs  campaign.rs  core.rs  library.rs  mechanics.rs  mod.rs  search.rs  system.rs  tests.rs  world.rs
frontend/src/components/: campaigns.rs  character.rs  chat.rs  command_palette.rs  context_menu.rs  design_system.rs  graph_view.rs  library.rs  mod.rs  resizable_panel.rs  session.rs  settings.rs
frontend/src/components/analytics/: audit_log_viewer.rs  mod.rs  search_analytics.rs  usage_dashboard.rs
frontend/src/components/campaign/: campaign_card.rs  campaign_card_tests.rs  campaign_create_modal.rs  campaign_dashboard.rs  entity_browser.rs  mod.rs  random_table.rs  relationship_editor.rs  relationship_graph.rs  version_history.rs  world_state_editor.rs
frontend/src/components/campaign_details/: campaign_card.rs  mod.rs  npc_conversation.rs  npc_list.rs  personality_manager.rs  session_list.rs
frontend/src/components/campaign_wizard/: auto_save.rs  conversation_panel.rs  draft_recovery.rs  error_display.rs  help_tooltip.rs  interview_mode.rs  mod.rs  offline_indicator.rs  step_progress.rs  wizard_shell.rs
frontend/src/components/chat/: chat_message.rs  mod.rs  personality_selector.rs
frontend/src/components/design_system/: badge.rs  button.rs  card.rs  effects.rs  input.rs  loading.rs  markdown.rs  mod.rs  select.rs  slider.rs  tests.rs  toast.rs
frontend/src/components/generation/: character_background_preview.rs  generation_preview.rs  mod.rs  npc_preview.rs  session_plan_preview.rs
frontend/src/components/graph/: entity_graph.rs  mod.rs
frontend/src/components/layout/: icon_rail.rs  main_shell.rs  media_bar.rs  mod.rs
frontend/src/components/session/: active_session_workspace.rs  card_tray.rs  cheat_sheet_viewer.rs  combat_tracker.rs  combatant_card.rs  condition_manager.rs  control_panel.rs  conversation_list.rs  entity_card.rs  initiative_list.rs  mod.rs  notes_panel.rs  npc_list.rs  recap_viewer.rs  session_chat_panel.rs  session_list.rs  thread_tabs.rs  timeline_view.rs
frontend/src/components/settings/: claude_auth.rs  claude_gate_auth.rs  copilot_auth.rs  data.rs  embedding.rs  extraction.rs  gemini_auth.rs  gemini_gate_auth.rs  general.rs  llm.rs  mod.rs  model_selection.rs  voice.rs
frontend/src/components/settings_components/: mod.rs  theme_editor.rs
frontend/src/components/voice/: mod.rs  profile_manager.rs
frontend/src/services/: chat_context.rs  chat_session_service.rs  game_mechanics.rs  layout_service.rs  mod.rs  notification_service.rs  session.rs  streaming_chat.rs  theme_service.rs  theme_service_test.rs  wizard_state.rs
frontend/src/theme/: interpolate.rs  mod.rs
frontend/src/utils/: formatting.rs
frontend/tests/: header_link_test.rs
frontend/tests/components/: campaign_tests.rs  session_tests.rs  settings_tests.rs
frontend/tests/services/: game_mechanics_tests.rs  layout_service_tests.rs  mod.rs  notification_tests.rs  wizard_state_tests.rs
planning/gemini-cli/gemini-cli-rs/: Cargo.toml
src-tauri/: .env.example  .gitignore  Cargo.toml  IPC_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATIONS.md  SECURITY_IMPLEMENTATION.md  codesign-config.json  entitlements.plist  tauri.conf.json  updater-config.json
src-tauri/binaries/: mcp-server  mcp-server-x86_64-unknown-linux-gnu
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/installer-assets/: README.md
src-tauri/src/: backstory_commands.rs  commands.rs  commands_legacy.rs  error_handling.rs  lib.rs  main.rs  native_features.rs
src-tauri/src/claude_gate/: auth.rs  client.rs  error.rs  mod.rs  models.rs  storage.rs  transform.rs
src-tauri/src/commands/: mod.rs  state.rs  types.rs
src-tauri/src/core/: audio.rs  budget.rs  campaign_manager.rs  character_gen.rs  character_gen_old.rs  credentials.rs  embedding_pipeline.rs  hybrid_search.rs  keyword_search.rs  llm.rs  llm_router.rs  location_gen.rs  location_manager.rs  logging.rs  meilisearch_chat.rs  meilisearch_pipeline.rs  mod.rs  models.rs  name_gen.rs  npc_gen.rs  personality.rs  query_expansion.rs  search_analytics.rs  search_client.rs  session_manager.rs  sidecar_manager.rs  spell_correction.rs  theme.rs  transcription.rs  vector_store.rs  voice.rs
src-tauri/src/core/llm/: client.rs  (+7 more)
src-tauri/src/database/: analytics.rs  backup.rs  campaigns.rs  characters.rs  combat.rs  locations.rs  migrations.rs  mod.rs  models.rs  quick_reference.rs  relationships.rs  search_analytics.rs  sessions.rs  ttrpg.rs
src-tauri/src/gate/: mod.rs
src-tauri/src/ingestion/: adaptive_learning.rs  character_gen.rs  chunker.rs  claude_extractor.rs  docx_parser.rs  extraction_settings.rs  hash.rs  kreuzberg_extractor.rs  mod.rs  pdf_parser.rs  pipeline_models.rs  rulebook_linker.rs
src-tauri/src/oauth/: callback_server.rs  client.rs  error.rs  token.rs
src-tauri/src/tests/: README.md  data_manager_commands_tests.rs  database_tests.rs  error_handling_tests.rs  mcp_bridge_tests.rs  meilisearch_integration_tests.rs  mod.rs  performance_commands_tests.rs  resource_manager_comprehensive_tests.rs
src-tauri/tests/: copilot_auth_test.rs  full_ingest_test.rs  ingest_pdf_test.rs  ipc_integration.rs  scanned_pdf_test.rs
(+880 files in other folders)
