[package]
name = "ttrpg-assistant-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["web", "router"] }
tracing = "0.1"
tracing-wasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["Window", "Document", "console"] }
gloo-timers = "0.3"
