[package]
name = "ttrpg-assistant-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"

# Error handling
console_error_panic_hook = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlSelectElement",
    "console",
    "Navigator",
    "Clipboard",
    "MouseEvent",
    "CssStyleDeclaration",
    "HtmlTextAreaElement",
    "KeyboardEvent",
] }

# Utilities
gloo-timers = { version = "0.3", features = ["futures"] }
pulldown-cmark = "0.13.0"

[profile.release]
lto = true
opt-level = 'z'
