[package]
name = "ttrpg-assistant-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-wasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "console", "Navigator", "Clipboard"] }

gloo-timers = "0.3"
pulldown-cmark = "0.13.0"
dioxus = { version = "0.7.2", features = ["web", "router"] }

