[package]
name = "ttrpg-assistant"
version = "1.0.0"
description = "TTRPG Assistant Desktop Application"
authors = ["TTRPG Assistant Team"]
license = "MIT"
repository = "https://github.com/Raudbjorn/MDMAI"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-clipboard-manager = "2.1"
tauri-plugin-dialog = "2.1"
tauri-plugin-fs = "2.1"
tauri-plugin-http = "2.1"
tauri-plugin-notification = "2.1"
tauri-plugin-process = "2.1"
tauri-plugin-shell = "2.1"
tauri-plugin-updater = "2.1"
tauri-plugin-window-state = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
sysinfo = "0.30"
chrono = { version = "=0.4.38", features = ["serde"] }
# Data Management Dependencies
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
zstd = "0.13"
tar = "0.4"
walkdir = "2.0"
blake3 = "1.0"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.5"
thiserror = "1.0"
tempfile = "3.8"
# Security Dependencies
regex = "1.10"
url = "2.5"
base64 = "0.22"
hmac = "0.12"
pbkdf2 = "0.12"
flate2 = "1.0"

# Meilisearch for unified search (replaces lancedb + tantivy)
meilisearch-sdk = "0.31"
dirs = "6.0"
which = "7.0"

reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
rodio = "0.19"
lopdf = "0.32"
epub = "2.1"
zip = "2.1"
quick-xml = "0.36"
futures-util = "0.3"
async-trait = "0.1"

# Keychain dependencies
keyring = "2.3"
tracing = "0.1.44"

# LLM Proxy (OpenAI-compatible endpoint for Meilisearch chat)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
async-stream = "0.3"

# Claude Desktop CDP bridge
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_Security", "Win32_Security_Credentials"] }

# Additional system-level dependencies
libc = "0.2"



[dev-dependencies]
proptest = "1.6"
mockall = "0.13"
wiremock = "0.6"
fake = "4.1"
rstest = "0.24"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "ttrpg-assistant"
path = "src/main.rs"
