[package]
name = "gemini-cli-rs"
version = "0.1.0"
edition = "2021"
description = "Rust library for programmatic interaction with Google's Gemini CLI"
license = "MIT"
repository = "https://github.com/svnbjrn/gemini-cli-bridge"
keywords = ["gemini", "google", "ai", "cli", "automation"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["process", "io-util", "time", "sync", "macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Utilities
which = "7.0"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"
