[package]
name = "claude-code-rs"
version = "0.1.0"
edition = "2021"
description = "Rust library for programmatic interaction with Claude Code CLI"
license = "MIT"
repository = "https://github.com/svnbjrn/claude-code-bridge"
keywords = ["claude", "anthropic", "ai", "cli", "automation"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["process", "io-util", "time", "sync", "macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
which = "7.0"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
# Enable for Tauri integration helpers
tauri = []

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "conversation"
path = "examples/conversation.rs"
