[workspace]
resolver = "2"
members = ["src-tauri", "claude-cdp", "frontend"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["svnbjrn"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CDP/Chrome DevTools Protocol
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Leptos
leptos = { version = "0.7", features = ["csr"] }

# Tauri
tauri = { version = "2.2", features = [] }
tauri-build = "2.0"
