[package]
name = "claude-cdp"
version.workspace = true
edition = "2021"
description = "Chrome DevTools Protocol bridge for Claude Desktop"
license.workspace = true

[dependencies]
tokio = { workspace = true }
chromiumoxide = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
