[package]
name = "claude-bridge-frontend"
version = "0.1.0"
edition = "2021"
description = "Leptos frontend for Claude Desktop CDP bridge"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
